snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha1
a37a39c7326c8f4570d7c5ee1c564de2d7253b58